# GPU_REML

./: .gitignore  CITATION.md  CONTRIBUTING.md  README.md  __init__.py  admixed_cov.py  block_backend.py  component_spec.py  data_utils.py  effect_io.py  geno_source.py  geno_stream.py  gwas.py  gwas_io.py  io_utils.py  kv_impl.py  lasso_cd.py  pcg.py  pipeline_common.py  precond.py  prediction_io.py  pyproject.toml  relaxation_grouping.py  reml.py  reml_model.py  run_gpu.sh  run_gwas_pipeline.py  run_relaxation_grouping.py  run_reml_pipeline.py  run_sparse_reml_pipeline.py  runtime_env.py  sliding_window.py  smile_block_w.py  smile_planner.py  sparse_stream.py  suggest_params_v3.py  variant_io.py  zscore_merge.py
docs/: architecture.md  component_specs.md  mathematical_overview.md
tests/: test_admixed_cov.py  test_cli.py  test_component_spec.py  test_effect_estimation.py  test_effect_io.py  test_geno_source.py  test_gwas.py  test_lasso_cd.py  test_packaging.py  test_partitioned_grm.py  test_pcg_precond.py  test_pipeline_common.py  test_prediction.py  test_reml.py  test_reml_model.py  test_run_reml_pipeline.py  test_runtime_env.py  test_smile_block_w.py  test_smile_planner.py  test_sparse_stream.py  test_suggest_params.py  test_variant_io.py  test_zscore_merge.py
